# BMSTU

./: README.md  REAME.txt
Algorithms and data structures/1 module/: binsearch.c  concat.c  fibstr.c  fibsys.c  frame.c  insersect.c  maxarray.c  maxk.c  multiplicate_mod.c  peak.c  permut.c  polynom.c  primediv.c  revarray.c  saddlepoint.c  searchlisplist.c  strdiff.c  wcount.c
Algorithms and data structures/2 module/: bmall.c  datesort.c  direction sort.c  evristics.c  heapsort.c  kadane.c  kmpall.c  merge_insertsort.c  power2.c  prefixes.c  pword.c  quick_selectionsort.c  rangegcd_spacetable.c  rangemax.c  rangepeak.c  shellsort.c
Algorithms and data structures/3 module/: cluster.c  disparray.c  lexaavl.c  listbubblesort.c  listisort.c  merge.c  prefix_bor.c  qmax.c  qsstack.c  searchtree.c  spacelist.c  stackmachine.c  xor_hashtable.c
Android/: build.gradle  gradle.properties  settings.gradle
Android/app/: build.gradle
Android/lab4_1/: settings.gradle
Android/lab6_1/: settings.gradle
Automats/: CanNum.go  Eq.go  MilToMur.go  Min.go
Compilers/: CompilersLab2
Compilers/CompilersLab3/: test.txt
Compilers/CompilersLab5/: Makefile  go.mod
Compilers/Lab2/: astprint  (+4 more)
Graphs/: BridgeNum.java  Cpm.java  CritWay.java  Dividers.java  EqDist.java  FormulaOrder.java  Kruskal.java  Loops.java  MapRoute.java  Mars.java  MaxComponent.java  Prim.java
MathMethods/: go.mod  go.sum  models_1.go
NumMethods/4_new/: CMakeLists.txt  compiler.cpp
NumMethods/4_new/codegen/: codegen.cpp  codegen.hpp
NumMethods/4_new/irbuilder/: basicblock.hpp  controlflowgraph.hpp  irbuilder.hpp  threeaddresscode.hpp
NumMethods/4_new/lexer/: lexer.cpp
NumMethods/4_new/parser/: argast.hpp  argslistast.hpp  assstmtast.hpp  binexprast.hpp  compoundstmtast.hpp  datatypeast.hpp  declast.hpp  eqexprast.hpp  identast.hpp  ifstmtast.hpp  integerast.hpp  logicalexprast.hpp  loopstmtast.hpp  parser.hpp  primaryexprast.hpp  relexprast.hpp  retstmtast.hpp  stmtast.hpp  unaryexprast.hpp  unitast.hpp
OptCode/2/: CMakeLists.txt  build.sh  kek.cpp  lel  lul
biolabs/: go.mod
(+232 files in other folders)
